ISPN-16165 ResourceManagerImpl.lookupResource micro-optimization
* Use simple loop to split path instead of stream (4x faster)
* Use constants where possible to avoid extra allocations